--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-  <title>Dani Website</title>
+  <title>Happy 22 day</title>
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -106,7 +106,7 @@
 
 
   <!-- build:js scripts/main.min.js -->
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="scripts/jquery.js"></script>
   <script src="scripts/main.js"></script>
 
   <!-- endbuild -->
