BEM Filesystem #2 Tasks -------
- [x] changing **gulpfile.js** to compile just **all.scss**

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   -->
 
   <!-- build:css styles/components/main.min.css -->
-  <link rel="stylesheet" href="styles/h5bp.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/all.css">
   <!-- endbuild -->
 </head>
 <body>
