--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 
   <img class="img-animation img-animation--ocean_2" src="images/ocean_2.png" />
 
-  <div class="text">
+
+
+
+  <div class="textContainer">
     <div class="greetings_text">
       <span class="greetings_text-letter">H</span>
       <span class="greetings_text-letter">a</span>
@@ -82,7 +85,6 @@
       <span class="greetings_text-letter">y</span>
       <div class="clear"></div>
     </div>
-
     <div class="name_text">
       <span class="name_text-letter">D</span>
       <span class="name_text-letter">a</span>
@@ -94,6 +96,7 @@
       <span class="name_text-letter">e</span>
       <div class="clear"></div>
     </div>
+    <div class="clear"></div>
   </div>
 
   <!-- build:js scripts/main.min.js -->
